--- a/index.html
+++ b/index.html
@@ -3,6 +3,35 @@
     <title>
      Reuse Reduce Recycle 
       </title>
+   <style>
+     #Save the world{
+  text-decoration:underline;
+  font-size:20px;  
+}
+body{
+    text-align:center;
+  background-color:turquoise
+}
+h1{
+ color:pink;
+  border-style:solid;
+  border-color:white;
+  border-width:2px;
+  padding:10px;
+}
+a { 
+  color: white;
+  font-size: 20px; 
+  border-style: solid; border-color: darkblue; border-width: 2px; 
+  padding: 10px;
+  border-radius: 20px; }
+p{ 
+  color: darkred; 
+  word-spacing: 10px;
+  font-variant: small-caps; font-size: 20px; 
+  font-family:Arial
+}
+    </style>
     </head>
   <body>
     <h1>
